fixed alignmnet of 2 column tiles

--- a/styles/_blocks/tiles.scss
+++ b/styles/_blocks/tiles.scss
@@ -14,6 +14,47 @@
 		background: var.$grey_background;
 	}
 
+	&[class*='background_'] {
+		padding: 10px;
+		color: var.$white;
+
+		&.background_grey_light, &.background_white {
+			color: var.$neutral;
+
+			h1, h2 {
+				color: var.$secondary;
+			}
+		}
+
+		&.background_blue_dark {
+			background: var.$secondary;
+		}
+
+		&.background_blue_light {
+			background: var.$primary;
+		}
+
+		&.background_grey_dark {
+			background: var.$grey_dark;
+		}
+
+		&.background_grey_medium {
+			background: var.$grey_mid;
+		}
+
+		&.background_grey_light {
+			background: var.$grey_light;
+		}
+
+		&.background_gold {
+			background: var.$gold;
+		}
+
+		&.background_white {
+			background: var.$white;
+		}
+	}
+
 	*[data-attribute='container'] {
 		&.empty {
 			flex-basis: 0;
@@ -190,6 +231,11 @@
 
 		img {
 			margin: 20px auto;
+		}
+
+		iframe {
+			max-width: 100%;
+			margin: 0 auto;
 		}
 
 		&:empty {
@@ -405,6 +451,10 @@
 
 			.pa_tile {
 				flex-basis: calc(50% - 40px);
+
+				&.width_full {
+					flex-basis: 100%;
+				}
 			}
 		}
 
@@ -459,6 +509,16 @@
 		.pa_tile {
 			display: flex;
 			align-items: center;
+
+			&.text_align_centre {
+				justify-content: center;
+				text-align: center;
+			}
+
+			&.text_align_right {
+				justify-content: flex-end;
+				text-align: right;
+			}
 
 			&.img_small {
 				.pa_tile {
